# aw-watcher-cmux

./: .gitignore  Makefile  README.md  aw-watcher-cmux.toml.example  pyproject.toml
aw_watcher_cmux/: __init__.py  __main__.py  ax.py  cmux.py  main.py  normalize.py
docs/superpowers/plans/: 2026-06-16-ax-primary-data-source.md
docs/superpowers/specs/: 2026-06-16-ax-primary-data-source-design.md
packaging/: com.activitywatch.aw-watcher-cmux.plist
scripts/: install.sh  uninstall.sh  verify.sh
tests/: test_ax.py  test_config.py  test_loop.py  test_normalize.py  test_parse.py
tests/fixtures/: ax_tree_focused.json  ax_tree_no_selection.json  list-pane-surfaces.txt  list-workspaces.txt
